--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/aliyun-node/commands#readme",
   "dependencies": {
-    "formstream": "^1.0.0",
-    "urllib": "^2.11.0",
-    "tunnel-agent": "^0.4.3"
+    "formstream": "^1.1.0",
+    "tunnel-agent": "^0.6.0",
+    "urllib": "^2.22.0"
   }
 }
